--- a/source/_data/header.njk
+++ b/source/_data/header.njk
@@ -1,1 +1,1 @@
-<img src="https://img.njzjz.win/?url=https://api.njzjz.win/1sCjuEpWGrTMwGY-7YdpCeDa2fT7J1ZXl" class="header-image" width="1080" height="281" alt="Tong Zhu Research Group">
+<img id="banner" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/header{{ [1,2,3,4,5] | random }}.jpg" class="header-image" width="1080" height="281" alt="Tong Zhu Research Group">
