--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -28,7 +28,7 @@
 }
 
 body {
-    background-image: url(https://img.njzjz.win/?url=https://api.njzjz.win/1OxT0dIRkj-IhV_oEb0rjRht5r4pzkCRf);
+    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
