--- a/source/_data/sidebar.njk
+++ b/source/_data/sidebar.njk
@@ -15,10 +15,10 @@
 </div>
 
 <div class="widget">
-    <img src="https://img.njzjz.win/?url=https://api.njzjz.win/1OxT0dIRkj-IhV_oEb0rjRht5r4pzkCRf" alt="" width="500" height="332">
+    <img src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/tower.jpg" alt="" width="500" height="332">
 </div>
 
 <div class="widget">
     <p><a href="http://www.beian.miit.gov.cn/">沪ICP备18023061号-1</a></p>
-    <p><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31009102000069"><img loading="lazy" class="alignnone wp-image-740 size-full" src="https://img.njzjz.win/?url=https://api.njzjz.win/1N4jhObR9VjTdVNk_5Pt3NAmnv55qtq9h" alt="" width="20" height="20" style="display:inline;">沪公网安备 31009102000069号</a></p>
+    <p><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31009102000069"><img loading="lazy" class="alignnone wp-image-740 size-full" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/beian.png" alt="" width="20" height="20" style="display:inline;">沪公网安备 31009102000069号</a></p>
 </div>
