bg.jpg and tower.jpg are the same image
do not realize before...

--- a/source/_data/sidebar.njk
+++ b/source/_data/sidebar.njk
@@ -15,7 +15,7 @@
 </div>
 
 <div class="widget">
-    <img src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/tower.jpg" alt="" width="500" height="332">
+    <img src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg" alt="" width="500" height="332">
 </div>
 
 <div class="widget">
