--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -21,6 +21,7 @@
 }
 .main, .footer{
 	box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+	margin: 48px auto;
 	max-width: 960px;
 	overflow: hidden;
 	padding: 0 40px;
@@ -91,20 +92,15 @@ body {
 	display: none;
 }
 
-@media screen and (min-width: 600px) {
-	.sidebar{
-		position: static;
-		float: right;
-		width: 26.041666667%;
-	}
-
-	.main-inner{
-		float: left;
-		width: 65.104166667%;
-	}
+.sidebar{
+	position: static;
+	float: right;
+	width: 26.041666667%;
 }
 
 .main-inner{
+	float: left;
+    width: 65.104166667%;
 	padding: 0;
 	margin: 0 auto;
 }
