--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,30 +1,29 @@
-.main, .footer {
-	padding: 0 24px;
-	padding: 0 1.714285714rem;
-}
 @media screen and (min-width: 600px) {
 	.main, .footer {
+		padding: 0 24px;
+		padding: 0 1.714285714rem;
 		margin: 0 auto;
 		max-width: 960px;
 		max-width: 68.571428571rem;
 		overflow: hidden;
+		box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
 	}
 }
 @media screen and (min-width: 960px) {
 	body .main {
 		padding: 0 40px;
 		padding: 0 2.857142857rem;
-		margin-top: 48px;
-		margin-top: 3.428571429rem;
-		box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
 	}
 }
+.main {
+	margin-top: 48px;
+	margin-top: 3.428571429rem;
+}
 .main, .footer{
-	box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
-	margin: 48px auto;
 	max-width: 960px;
 	overflow: hidden;
 	padding: 0 40px;
+	box-shadow: none;
 }
 
 body {
@@ -88,19 +87,27 @@ body {
 	height: auto;
 }
 
-.headband, .site-author, .sidebar-toggle, .site-nav-toggle, .site-nav-right, .footer{
+.headband, .site-author, .sidebar-toggle, .site-nav-toggle, .site-nav-right, .sidebar, .copyright{
 	display: none;
 }
 
-.sidebar{
-	position: static;
-	float: right;
-	width: 26.041666667%;
+@media screen and (min-width: 600px) {
+	.footer{
+		display: none;
+	}
+	.main-inner{
+		float: left;
+		width: 65.104166667%;
+	}
+	.sidebar{
+		display: flex;
+		position: static;
+		float: right;
+		width: 26.041666667%;
+	}
 }
 
 .main-inner{
-	float: left;
-    width: 65.104166667%;
 	padding: 0;
 	margin: 0 auto;
 }
@@ -115,6 +122,10 @@ body {
 
 .sidebar-panel-container{
 	max-height: none;
+}
+
+.footer-inner{
+	text-align: left;
 }
 
 .widget{
