chore: optimize lazyload

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -151,3 +151,7 @@ body {
     font-size: .928571429rem;
     line-height: 1.846153846;
 }
+
+article img:not([data-loaded$="true"]){
+    padding-bottom: 61.8%;
+}
