--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -27,11 +27,16 @@
 }
 
 body {
-    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+}
+.webp body{
+    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@c45d7182baf9b0d20751fff358a100888aba1eef/bg.webp);
+}
+.no-webp body{
+    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg);
 }
 
 .brand {
