--- a/source/_data/header.njk
+++ b/source/_data/header.njk
@@ -1,5 +1,5 @@
 <picture>
     <source type="image/webp" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@c45d7182baf9b0d20751fff358a100888aba1eef/header{{ [1,2,3,4,5] | random }}.webp">
     <source type="image/jpeg" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/header{{ [1,2,3,4,5] | random }}.jpg">
-    <img id="banner" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/header{{ [1,2,3,4,5] | random }}.jpg" class="header-image" width="1080" height="281" alt="Tong Zhu Research Group">
+    <img loading="lazy" id="banner" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/header{{ [1,2,3,4,5] | random }}.jpg" class="header-image" width="1080" height="281" alt="Tong Zhu Research Group">
 </picture>
