--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -160,3 +160,6 @@ body {
 article img:not([data-loaded$="true"]){
     padding-bottom: 61.8%;
 }
+.links-of-author a::before {
+    background: #fb1f6e;
+}
