chore: refactor icons

--- a/source/_data/footer.njk
+++ b/source/_data/footer.njk
@@ -16,9 +16,9 @@
 
 <div class="widget">
     <picture>
-        <source type="image/webp" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@c45d7182baf9b0d20751fff358a100888aba1eef/bg.webp">
-        <source type="image/jpeg" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg">
-        <img loading="lazy" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg" alt="" width="500" height="332">
+        <source type="image/webp" srcset="{{ theme.icons }}computchem/bg.webp">
+        <source type="image/jpeg" srcset="{{ theme.icons }}computchem/bg.jpg">
+        <img loading="lazy" src="{{ theme.icons }}bg.jpg" alt="Background" width="500" height="332">
     </picture>
 </div>
 
@@ -26,9 +26,9 @@
     <p><a href="http://www.beian.miit.gov.cn/">沪ICP备18023061号-1</a></p>
     <p><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31009102000069">
     <picture>
-        <source type="image/svg+xml" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@c45d7182baf9b0d20751fff358a100888aba1eef/ghs.svg">
-        <source type="image/png" srcset="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/beian.png">
-        <img loading="lazy" class="alignnone wp-image-740 size-full" src="https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/beian.png" alt="" width="20" height="20" style="display:inline;">
+        <source type="image/svg+xml" srcset="{{ theme.icons }}beian/beian.svg">
+        <source type="image/png" srcset="{{ theme.icons }}beian/beian.png">
+        <img loading="lazy" src="{{ theme.icons }}beian/beian.png" alt="Beian" width="20" height="20" style="display:inline;">
     </picture>
     沪公网安备 31009102000069号</a></p>
 </div>
