replace jsdelivr with cdnjs and unpkg
see https://github.com/jsdelivr/jsdelivr/issues/18397

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -33,10 +33,10 @@ body {
     background-attachment: fixed;
 }
 .webp body{
-    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@c45d7182baf9b0d20751fff358a100888aba1eef/bg.webp);
+    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.webp);
 }
 .no-webp body{
-    background-image: url(https://cdn.jsdelivr.net/gh/tongzhugroup/tongzhugroup.github.io@7cebddef46c046a7a1119199002fe15b1c2dec24/bg.jpg);
+    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.jpg);
 }
 
 .brand {
