fix background image

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -32,11 +32,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
-.webp body{
+.body{
     background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.webp);
-}
-.no-webp body{
-    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.jpg);
 }
 
 .brand {
