--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -31,7 +31,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.webp);
+    background-image: url(https://unpkg.com/@njzjz/icons@0.0.4/computchem/bg.webp);
 }
 
 .brand {
