fix background image (#233)
* fix background image

* Update styles.styl

* Update styles.styl

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -31,12 +31,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
-.webp body{
-    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.webp);
-}
-.no-webp body{
-    background-image: url(https://unpkg.com/browse/@njzjz/icons@0.0.4/computchem/bg.jpg);
+    background-image: url(https://unpkg.com/@njzjz/icons@0.0.4/computchem/bg.webp);
 }
 
 .brand {
